--- a/less/actor-sheet.less
+++ b/less/actor-sheet.less
@@ -24,6 +24,14 @@
             width: 20%;
         }
     }
+    .central {
+        display: flex;
+        flex-direction: row;
+
+        .item-create{
+            margin-left: auto;
+        }
+    }
     .imgpaxtitle01 {
         display: block;
         background-image: url('./asset/image/pax_titre.webp');
