--- a/less/actor-sheet.less
+++ b/less/actor-sheet.less
@@ -27,6 +27,7 @@
     .central {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
 
         .item-create{
             margin-left: auto;
