--- a/templates/partials/atout-card.html
+++ b/templates/partials/atout-card.html
@@ -1,12 +1,13 @@
 <div class="atout-card">
+    <div class="atout-header" data-item-id="{{item.id}}">
+        <p>{{localize cleenmain.label.atout}}</p>
+    </div>
     {{#if data.developed}}
     <input id="{{id}}-{{name}}-dev" name="data.developed" type="checkbox" value="data.developed" checked/>
     {{else}}
     <input id="{{id}}-{{name}}-dev" name="data.developed" type="checkbox" value="data.developed"/>
     {{/if}}
-    <div class="atout-name">
-        <p>{{name}}</p>
-    </div>
+    <div class="atout-name">{{name}}</div>
     <div class="sheet-description">
         {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
     </div>
