--- a/templates/sheets/pj-sheet.html
+++ b/templates/sheets/pj-sheet.html
@@ -39,7 +39,7 @@
             <i class="fas fa-plus"></i>
         </a>
         <div class="atouts">
-            {{#each atouts as |item|}}
+            {{#each atouts as |item id|}}
             {{> "systems/cleenmain/templates/partials/atout-card.html" item}}
             {{/each}}
         </div>
