--- a/less/cleenmain.less
+++ b/less/cleenmain.less
@@ -1,3 +1,16 @@
-@import "./item-sheet.less";
+@import "./config.less";
 @import "./actor-sheet.less";
 @import "./atout-card.less";
+@import "./item-sheet.less";
+@import "./tab/player-atouts.less";
+@import "./tab/player-bio.less";
+@import "./tab/player-combat.less";
+@import "./tab/player-notes.less";
+@import "./tab/player-equipment.less";
+
+@import "./actor-sheet-style.less";
+@import "./tab/player-atouts-style.less";
+@import "./tab/player-bio-style.less";
+@import "./tab/player-combat-style.less";
+@import "./tab/player-notes-style.less";
+@import "./tab/player-equipment-style.less";
