--- a/templates/sheets/skill-sheet.html
+++ b/templates/sheets/skill-sheet.html
@@ -3,13 +3,15 @@
         <h1><input name="name" type="text" value="{{item.name}}"/></h1>
     </header>
     <div class="sheet-content">
-        <div class="atout-name-line">
+        <div class="input-skillvalue">
+            <input title="{{localize "cleenmain.label.value"}}" id="skill" name="data.value" type="number" value="{{data.value}}"/>
+            </div>
+        <div class="skill-name-line">
             {{#if data.developed}}
             <input name="data.developed" value="{{data.developed}}" type="checkbox" value="1" checked/>
             {{else}}
             <input name="data.developed" value="{{data.developed}}" type="checkbox" value="0"/>
             {{/if}}
-        {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
     </div>
 </form>
 
