--- a/templates/sheets/weapon-sheet.html
+++ b/templates/sheets/weapon-sheet.html
@@ -1,7 +1,7 @@
 <form class="{{cssClass}}" autocomplete="off">
     <header class="sheet-header">
         <img src="{{item.img}}" data-edit="img" title="{{item.name}}" height="64" width="64"/>
-        <h1><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
+        <h1><input name="name" type="text" value="{{item.name}}"/></h1>
     </header>
     <div class="sheet-content">
         <table>
@@ -12,6 +12,7 @@
                 <th>{{localize "cleenmain.arme.portee"}}</th>
                 <th>{{localize "cleenmain.arme.cibles"}}</th>
                 <th>{{localize "cleenmain.arme.special"}}</th>
+                <th>{{localize "cleenmain.arme.score"}}</th>
             </tr>
             <td>
                 <select name="data.categorie">
@@ -43,7 +44,12 @@
             <td>
                 <input name="data.special" type="text" value="{{data.special}}" />
             </td>
+            <td>
+                <input name="data.score" type="text" value="{{data.score}}" />
+            </td>
             </table>
+            
+            <div class="description">{{localize "cleenmain.label.description"}}</div>
             {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
     </div>
 </form>
